--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -98,3 +98,15 @@
   rockstar: false
   social:
     - {name: "homepage", link: "https://www.wiwi.hu-berlin.de/de/forschung/irtg/participating-faculty/students/personal-pages/bruno-spilak"}
+
+-
+  id: 35
+  name: "Michael"
+  surname: "Althoff"
+  company: "PIMCO Munich Allianz"
+  title: "PhD student"
+  bio: '<p> </p>'
+  thumbnailUrl: Michael.jpg
+  rockstar: false
+  #social:
+  #   - {name: "homepage", link: "https://www.wiwi.hu-berlin.de/de/forschung/irtg/participating-faculty/students/personal-pages/bruno-spilak"}
