--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -146,3 +146,15 @@
   rockstar: false
   social:
     - {name: "homepage", link: "https://www.wiwi.hu-berlin.de/de/forschung/irtg/participating-faculty/students/personal-pages/elizaveta-zinovyeva"}
+
+-
+  id: 39
+  name: "Xinwen"
+  surname: "Ni"
+  company: "Humboldt-Universität zu Berlin"
+  title: "PhD student"
+  bio: '<p> </p>'
+  thumbnailUrl: xinwen.jpg
+  rockstar: false
+  social:
+    - {name: "homepage", link: "https://hu.berlin/xinwen_ni"}
