--- a/_config.yml
+++ b/_config.yml
@@ -45,13 +45,13 @@ navigationLinks:
  #- {permalink: "/blog/", text: "Blog"}
  - {permalink: "/schedule/", text: "Schedule"}
  - {permalink: "/speakers/", text: "Speakers"}
-- {permalink: "https://barunik.github.io/Prague2019/", text: "STAT of ML 2019"}
  #- {permalink: "/team/", text: "Team"}
  #- {permalink: "/logistics/", text: "Logistics"}
  #- {permalink: "/hackathon/", text: "Hackathon"}
 #bottomNavigationLinks:
 # - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
-#rightNavigationButtons:
+rightNavigationButtons:
+- {link: "https://barunik.github.io/Prague2019/", text: "STAT of ML 2019"}
 # - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
 
 # Hero Block
