--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -69,7 +69,7 @@
   company: "Universitat Pompeu Fabra"
   title: "Professor"
   bio: '<p></p>'
-  thumbnailUrl: brownlees.jpeg
+  thumbnailUrl: brownlees.jpg
   rockstar: false
   social:
     - {name: "homepage", link: "econ.upf.edu/~cbrownlees"}
