--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -81,7 +81,7 @@
   company: "IHEC, Sousse, TN"
   title: "Guest Researcher"
   bio: '<p></p>'
-  thumbnailUrl: benamor.jpg
+  thumbnailUrl: benamor.png
   rockstar: false
 
 
