--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -14,7 +14,7 @@
   id: 2
   name: "Jozef"
   surname: "Barunik"
-  company: "Charles University"
+  company: "Academy of Sciences and Charles University"
   title: "Associate Professor"
   bio: "Jozef Baruník is an Associate Professor at the Institute of Economic Studies, Charles University in Prague.
   He also serves as a head of the Econometrics department at the Czech Academy of Sciences. In his research,
@@ -84,12 +84,48 @@
   thumbnailUrl: benamor.png
   rockstar: false
 
+-
+  id: 8
+  name: "Tomáš"
+  surname: "Cipra"
+  company: "Charles University"
+  title: "Professor"
+  bio: '<p> </p>'
+  thumbnailUrl: cipra.jpg
+  rockstar: false
+  social:
+    - {name: "homepage", link: "https://www2.karlin.mff.cuni.cz/~cipra/"}
+
+-
+  id: 9
+  name: "Martin"
+  surname: "Branda"
+  company: "Charles University"
+  title: "Assistant Professor"
+  bio: '<p> </p>'
+  thumbnailUrl: branda.jpg
+  rockstar: false
+  social:
+    - {name: "homepage", link: "http://artax.karlin.mff.cuni.cz/~branm1am/indexEN.html"}
+
+-
+  id: 10
+  name: "Lukas"
+  surname: "Vacha"
+  company: "Academy of Sciences and Charles University"
+  title: "Senior Researcher"
+  bio: '<p> </p>'
+  thumbnailUrl: vacha.jpg
+  rockstar: false
+  social:
+    - {name: "homepage", link: "https://www.utia.cas.cz/people/vacha"}
+
 
 -
   id: 32
   name: "Lubos"
   surname: "Hanus"
-  company: "Charles University"
+  company: "Academy of Sciences and Charles University"
   title: "PhD student"
   bio: '<p> </p>'
   thumbnailUrl: hanus.png
@@ -101,7 +137,7 @@
   id: 33
   name: "Martin"
   surname: "Hronec"
-  company: "Charles University"
+  company: "Academy of Sciences and Charles University"
   title: "PhD student"
   bio: '<p> </p>'
   thumbnailUrl: hronec.jpg
@@ -180,3 +216,15 @@
   rockstar: false
   social:
     - {name: "homepage", link: "https://hu.berlin/xinwen_ni"}
+
+-
+  id: 40
+  name: "Josef"
+  surname: "Kurka"
+  company: "Academy of Sciences and Charles University"
+  title: "PhD student"
+  bio: '<p> </p>'
+  thumbnailUrl: pepa.jpg
+  rockstar: false
+  social:
+    - {name: "homepage", link: "https://ies.fsv.cuni.cz/cs/staff/kurka"}
