--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -138,7 +138,7 @@
   name: "Michal"
   surname: "Pesta"
   company: "Charles University"
-  title: "Research Assistant"
+  title: "Associate Professor"
   bio: '<p> </p>'
   thumbnailUrl: pesta.jpg
   rockstar: false
